css botones y detalles

--- a/src/styleSheets/Inicio.css
+++ b/src/styleSheets/Inicio.css
@@ -1,3 +1,24 @@
+.button-cerrar-sesion{
+   background-color: rgb(147, 120, 136);
+   width: 150px;
+   height: 40px;
+   font-family: Arial, Helvetica, sans-serif;
+   cursor: pointer;
+   font-size: 13px;
+   align-items: center;
+   margin: 25px auto;
+   justify-content: center;
+   border: 2px solid;
+   color: grey;
+   background: linear-gradient(to left, transparent 50%, rgb(233, 172, 59) 50%) no-repeat right/ 200%;
+   transition: background-position .3s ease;
+}
+
+.button-cerrar-sesion:hover{
+   background-position: left;
+   color: rgb(233, 172, 59, 0.4);
+   color: white;
+}
 
   .Imagen-top{
    background-image: url("../img/amiibos2.png");
