--- a/src/styleSheets/Filtro.css
+++ b/src/styleSheets/Filtro.css
@@ -1,4 +1,4 @@
-.Titulo-filtro{
+.Titulo-filtro {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-top: 40px;
@@ -23,5 +23,10 @@
     font-size: 15px;
     text-align: left;
     cursor: pointer;
+    background: linear-gradient(to right, rgb(255, 255, 255) 60%, rgba(139, 192, 45)70%) no-repeat left/ 200%;
+    transition: background-position .3s ease;
+}
 
+.boton-filtro:hover {
+    background-position: right;
 }
