--- a/src/styleSheets/Login.css
+++ b/src/styleSheets/Login.css
@@ -1,5 +1,4 @@
-
-.fondo{
+.fondo {
     background-image: linear-gradient(to top, rgb(161, 159, 159, 0.3) 0%, rgba(200, 195, 195, 0.3) 0%), url("../img/AmiiboFondo.avif");
     background-position: center;
     background-repeat: no-repeat;
@@ -13,6 +12,7 @@
     align-items: center;
     padding: 0px;
     margin: 0px;
+    min-height: 100vh;
 }
 
 .img-title {
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .logo {
@@ -34,20 +34,22 @@
         height: 120px;
     }
 
-
-    
-    .fondo{
+    .fondo {
         width: 100%;
         height: 100vh;
         box-sizing: border-box;
         display: flex;
-        
         justify-content: center;
         align-items: center;
         padding: 0px;
         margin: 0px;
-  
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0px;
+        min-height: 100vh;
+
     }
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -65,12 +67,15 @@
     background-color: rgba(139, 192, 74, 0.9);
     padding: 30px;
     border-radius: 26px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+    margin: 40px;
+
     align-items: center;
     box-shadow: none;
-    margin-right: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 
 }
@@ -127,7 +132,6 @@
 
 
 .boton-ingresar {
-    background-color: rgb(182, 38, 121);
     width: 150px;
     height: 40px;
     font-family: Arial, Helvetica, sans-serif;
@@ -135,16 +139,20 @@
     border-radius: 15px;
     cursor: pointer;
     font-size: 15px;
-    border: 1px solid rgba(182, 38, 121);
+    border: none;
     align-items: center;
     margin: 25px auto;
     display: flex;
     justify-content: center;
+    background-image: linear-gradient(to right, rgb(182, 38, 121) 50%, rgba(233, 172, 59)50%);
+    background-size: 200%;
+    background-repeat: no-repeat;
+    background-position: left;
+    transition: background-position .3s ease;
 }
 
-button:hover {
-    background-color: rgba(233, 172, 59);
-    border: 1px solid rgba(233, 172, 59);
+.boton-ingresar:hover {
+    background-position: right;
 }
 
 .error-general {
