--- a/src/styleSheets/Item2.css
+++ b/src/styleSheets/Item2.css
@@ -12,11 +12,11 @@
 
 .nombre-amiibo {
 
-   /* background-color: green;*/
+    /* background-color: green;*/
     font-size: 20px;
-   margin: 5px;
-   margin-top: 10px;
-   margin-bottom: 10px;
+    margin: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .img-amiibo {
@@ -31,7 +31,7 @@
 
     /* background-color: red;*/
     margin: 5px;
-    
+
 }
 
 .detalles {
@@ -40,12 +40,12 @@
     margin-top: 5px;
     margin-bottom: 0px;
     border-top: 2px solid rgb(139, 192, 74, 0.4);
-    
+
 }
 
 .button-detalles {
 
-    background-image: linear-gradient(to right,rgb(182, 38, 121), rgba(76, 167, 225));
+    background-image: linear-gradient(to right, rgb(182, 38, 121), rgba(76, 167, 225));
     width: 130px;
     height: 35px;
     border-radius: 15px;
@@ -56,5 +56,5 @@
     margin: 15px auto;
     display: flex;
     justify-content: center;
-
+    color: aliceblue;
 }
