--- a/src/styleSheets/Detalles.css
+++ b/src/styleSheets/Detalles.css
@@ -1,12 +1,34 @@
-.character-amiibos {
+.button-back{
+    width: 150px;
+    height: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    cursor: pointer;
+    font-size: 13px;
+    align-items: center;
+    margin: 25px;
+    justify-content: center;
+    border: 1px solid;
+    color: grey;
+    background: linear-gradient(to left, transparent 50%, rgb(70, 142, 214) 50%) no-repeat right/ 200%;
+    
+ }
+ 
+ .button-back:hover{
+    background-position: left;
+    color: rgb(233, 172, 59, 0.4);
+    color: white;
+ }
 
+.character-amiibos {
+background-color: rgb(220, 59, 172);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 50px;
+    text-align: center;
 }
 
 .un-amiibos {
     background-color: brown;
-    margin: 50px;
+    margin: 40px;
     border: 2px solid gray;
 }
 
@@ -39,20 +61,20 @@
     text-align: center;
     padding: 20px;
     border-left: 2px solid black;
-
+    
 }
 
 .contendor-informacion-un-amiibo {
     background-color: rgb(240, 127, 255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30px;
+    font-size: 25px;
     margin: 10px;
     border-top: 2px solid black;
-    display: inline-block;
 }
 
 .nombre-un-amiibo {
     background-color: aqua;
+    display: flex;
 
 }
 
@@ -61,14 +83,18 @@
     display: flex;
 }
 
-.juego-un-amiibo {
+.seriejuego-un-amiibo {
     background-color: palevioletred;
-    display: inline-block;
+
 }
 
 .tipo-un-amiibo {
     background-color: blue;
+    
+}
 
+.juego-un-amiibo {
+    background-color: rgb(71, 52, 58);
 }
 
 .disponible-un-amiibo {
