--- a/src/styleSheets/Inicio.css
+++ b/src/styleSheets/Inicio.css
@@ -1,3 +1,5 @@
+
+
 .contendor-button-cerrar-sesion{
    text-align: right;
 }
@@ -23,32 +25,20 @@
    color: white;
 }
 
-.contendor-button-mas-amiibos{
-   display: flex;
-   align-items: right;
-}
-
-.button-mas-amiibos{
-   width: 150px;
-   height: 40px;
+.buscar{
+   width: 300px;
+   height: 45px;
+   border-radius: 15px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   cursor: pointer;
-   font-size: 13px;
-   align-items: center;
-   margin: 25px auto;
-   justify-content: center;
-   border: none;
-   color: black;
-   background: linear-gradient(to left, rgb(209, 209, 209) 20%, rgb(118, 118, 118) 70%) no-repeat right/ 200%;
-   transition: background-position .3s ease;
-}
+   font-size: 15px;
+   margin: 10px;
+   background-color: rgba(212, 110, 144, 0.6);
+   border: 1px solid rgb(212, 110, 144);
+   padding-left: 20px;
+   margin-bottom: 30px;
+   box-shadow: 4px 4px 4px grey;
+ }
 
-.button-mas-amiibos:hover{
-   background-position: left;
-   border: none;
-   color: white;
-   
-}
 
   .Imagen-top{
    background-image: url("../img/amiibos2.png");
