--- a/src/styleSheets/Listado2.css
+++ b/src/styleSheets/Listado2.css
@@ -1,15 +1,28 @@
-.buscar{
+.contendor-button-mas-amiibos{
+  display: flex;
+  align-items: right;
+}
 
-  width: 300px;
-  height: 45px;
-  border-radius: 15px;
+.button-mas-amiibos{
+  width: 150px;
+  height: 40px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  margin: 10px;
-  background-color: rgba(212, 110, 144, 0.6);
+  cursor: pointer;
+  font-size: 13px;
+  align-items: center;
+  margin: 25px auto;
+  justify-content: center;
+  border: none;
+  color: black;
+  background: linear-gradient(to left, rgb(209, 209, 209) 20%, rgb(118, 118, 118) 70%) no-repeat right/ 200%;
+  transition: background-position .3s ease;
+}
 
-  border: 1px solid rgb(212, 110, 144);
-  padding-left: 20px;
+.button-mas-amiibos:hover{
+  background-position: left;
+  border: none;
+  color: white;
+  
 }
 
 .contenedor-item {
