--- a/src/styleSheets/Detalles.css
+++ b/src/styleSheets/Detalles.css
@@ -36,35 +36,52 @@
 }
 
 .contendor-img-nombre-serie {
-    background-color: rgb(139, 192, 74, 0.9); 
+    background-color: rgb(139, 192, 74, 0.7); 
     display: flex;
     text-align: center;
     align-items: center;
     margin: 10px;
     justify-content: center;
+    height: 200px;
+   
+}
+
+@media screen and (min-width: 600px) {
+
+    .contendor-img-nombre-serie {
+        height: 350px;
+
+    }
+
+    .nombre-serie {
+        font-size: 25px;
+    }
+
+    .contendor-informacion-un-amiibo {
+        font-size: 25px;
+    }
 }
 
 .contendor-img-un-amiibo {
     /*background-color: blueviolet; */
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     align-items: center;
-
+    height: 100%;
+    margin: 20px;
 }
 
 .img-un-amiibo {
     /*background-color: rgb(250, 21, 0); */
-   
+    width: 100%;
+    height: 100%;
 
 }
 
 .nombre-serie {
     /*background-color: plum; */
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin: 20px;
-    padding: 20px;
-
+   
     align-items: center;
     text-align: center;
     border-left: 2px solid grey;
@@ -72,9 +89,8 @@
 }
 
 .contendor-informacion-un-amiibo {
-    background-color: rgb(197, 35, 130, 0.9);
+    background-color: rgb(197, 35, 130, 0.7);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 25px;
     margin: 10px;
     border-top: 2px solid rgb(172, 170, 170);
     padding: 10px;
@@ -114,8 +130,7 @@
 
 .disponible-un-amiibo {
     /*background-color: darkgoldenrod; */
-    display: inline-block;
-
+    margin: 15px;
 }
 
 .subtitulo {
