--- a/src/styleSheets/Filtro.css
+++ b/src/styleSheets/Filtro.css
@@ -1,24 +1,30 @@
-.Titulo-filtro {
+
+.titulo-filtro {
+    width: 200px;
+    height: 45px;
+    border-radius: 15px !important;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-top: 40px;
+    font-size: 15px;
+    margin: 10px;
+    margin-top: 20px;
+    background-color: rgba(139, 192, 45, 0.6) !important;
+    border: 1px solid rgb(139, 192, 45) !important;
+    padding-left: 20px;
+    margin-left: 35px;
+    color:black !important;
 }
 
 .contenedor-boton-filtro {
     display: flex;
     flex-direction: column;
     margin: 15px;
+
 }
 
 .boton-filtro {
 
     width: 200px;
     height: 35px;
-    background-color: white;
-    border-right: 2px solid white;
-    border-left: 2px solid white;
-    border-top: 2px solid white;
-    border-bottom: 2px solid rgba(139, 192, 45);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
     text-align: left;
