--- a/src/styleSheets/Login.css
+++ b/src/styleSheets/Login.css
@@ -47,7 +47,10 @@
         padding: 0px;
         margin: 0px;
         min-height: 100vh;
+    }
 
+    .contenedor-inicial {
+        margin: 0px auto;
     }
 
 }
@@ -61,7 +64,6 @@
 }
 
 .contenedor-inicial {
-
     width: 370px;
     height: 400px;
     background-color: rgba(139, 192, 74, 0.9);
@@ -74,7 +76,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 
 }
 
