--- a/src/styleSheets/Inicio.css
+++ b/src/styleSheets/Inicio.css
@@ -24,7 +24,6 @@
    border: 1px solid;
    color: grey;
    background: linear-gradient(to left, transparent 50%, rgb(214, 70, 70) 50%) no-repeat right/ 200%;
-   
 }
 
 .button-cerrar-sesion:hover{
@@ -42,25 +41,29 @@
    margin: 10px;
    background-color: rgba(212, 110, 144, 0.6);
    border: 1px solid rgb(212, 110, 144);
-   padding-left: 20px;
+   padding-left: 15px;
    box-shadow: 4px 4px 4px grey;
    margin-left: 35px;
  }
 
-
-  .imagen-top{
-   background-image: url("../img/amiibos2.png");
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 25vh;
-
+.imgTOP{
+   height: 15vh;
+   width: 100%;
 }
-@media screen and (min-width: 720px) {
 
-   .imagen-top{
-      height: 45vh;
+ @media screen and (min-width: 720px) {
+
+   .imgTOP{
+      height: 20vh;
    }
  
  }
-
+ 
+ @media screen and (min-width: 895px) {
+ 
+   .imgTOP{
+      height: 25vh;
+   }
+ 
+ }
+ 
