--- a/src/styleSheets/Detalles.css
+++ b/src/styleSheets/Detalles.css
@@ -21,7 +21,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 45px;
     text-align: center;
-    margin:0px;
+    margin: 0px;
 }
 
 .un-amiibos {
@@ -31,7 +31,7 @@
 }
 
 .contendor-img-nombre-serie {
-    background-color: rgb(139, 192, 74, 0.7); 
+    background-color: rgb(139, 192, 74, 0.7);
     display: flex;
     text-align: center;
     align-items: center;
@@ -81,7 +81,10 @@
     margin: 15px;
 }
 
-.seriejuego-un-amiibo, .tipo-un-amiibo, .juego-un-amiibo, .disponible-un-amiibo {
+.seriejuego-un-amiibo,
+.tipo-un-amiibo,
+.juego-un-amiibo,
+.disponible-un-amiibo {
     margin: 15px;
 }
 
@@ -98,6 +101,25 @@
     margin: 0px;
     color: rgb(93, 92, 92);
 }
+
+.contenedor-spinner {
+    height: 100vh;
+    width: 100%;
+}
+
+.cargando {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.nombre-spinner {
+    margin-top: 40px;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+}
+
 
 @media screen and (min-width: 600px) {
 
