--- a/src/styleSheets/Listado2.css
+++ b/src/styleSheets/Listado2.css
@@ -32,6 +32,19 @@
   text-align: center;
 }
 
+.contenedor-spinner-listado2 {
+
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.nombre-spinner {
+  margin-top: 20px;
+}
+
 /* esto es para pantalla grande*/
 
 @media screen and (min-width: 720px) {
