--- a/src/styleSheets/Login.css
+++ b/src/styleSheets/Login.css
@@ -24,7 +24,7 @@
 }
 
 .logo {
-    height: 100px;
+    height: 85px;
 }
 
 .contenedor-inicial {
@@ -69,7 +69,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     margin: 10px;
-    background-color: rgba(76, 167, 225, 0.7);
+    background-color: rgba(76, 167, 225, 0.9);
     border: 1px solid rgba(76, 167, 225);
     cursor: pointer;
     outline: none;
@@ -108,6 +108,7 @@
     background-repeat: no-repeat;
     background-position: left;
     transition: background-position .3s ease;
+    color: black;
 }
 
 .boton-ingresar:hover {
